# emit

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh
frontend/: App.tsx  index.html  metadata.json  package-lock.json  package.json  types.ts
frontend/components/: HomePage.tsx  JoinPage.tsx  LogFilters.tsx  LogTable.tsx  LogsPage.tsx  ProfilePage.tsx  ProjectsPage.tsx
frontend/services/: apiService.ts  authService.ts  logService.ts
src/: config.py  db.py  kafka_consumer.py  kafka_producer.py  main.py  models.py  schema.py  storage.py  storage_factory.py  test_client.py  utils.py
src/log_client/: client.py  handler.py  utils.py
